Servicios promotion y customer listo terminar servicios y revisar proyecto